tests/paczka1/small_fuzzy/86342047.err
Error in line 10: gsAOalind8 A684 109,0
Error in line 12: 68or3 A684 82,8
